--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@ng-select/ng-select/themes/default.theme.css";
 
 html,
 body {
@@ -11,3 +12,27 @@ body {
 mat-dialog-container {
   padding: 0px !important;
 }
+
+.ng-option {
+  text-transform: capitalize;
+}
+
+// .ng-dropdown-panel .ng-dropdown-panel-items .ng-option.ng-option-selected,
+// .ng-dropdown-panel
+//   .ng-dropdown-panel-items
+//   .ng-option.ng-option-selected.ng-option-marked {
+//   background-color: #cebcbd;
+// }
+
+// ng-select {
+//   border: 1px solid black;
+//   padding: 0px 0px;
+
+//   .ng-dropdown-panel {
+//     border: 1px solid black;
+//   }
+
+//   // .ng-option {
+//   //   border: 1px solid black;
+//   // }
+// }
