--- a/src/app/components/modal-dialog/modal-dialog.component.html
+++ b/src/app/components/modal-dialog/modal-dialog.component.html
@@ -3,7 +3,7 @@
 
   <div class="modal-dialog-container">
     <mat-dialog-actions class="close-buttons">
-      <button mat-button mat-dialog-close>
+      <button mat-button mat-dialog-close (click)="close()">
         <mat-icon aria-hidden="false" aria-label="drink icon">close</mat-icon>
       </button>
     </mat-dialog-actions>
