--- a/src/app/components/admin-modal-dialog/admin-category/admin-category.component.scss
+++ b/src/app/components/admin-modal-dialog/admin-category/admin-category.component.scss
@@ -11,10 +11,36 @@
 
 .modal-dialog-container {
   width: 300px;
-  height: 325px;
+  height: 230px;
   padding: 40px;
   background-color: white;
   border-radius: 25px;
+  position: relative;
+
+  .close-button {
+    position: absolute;
+    right: -10px;
+    top: -5px;
+    width: 40px;
+    height: 30px;
+    border: none;
+    outline: none;
+
+    button {
+      width: 100%;
+      height: 100%;
+      border: none;
+      cursor: pointer;
+      border-radius: 5px;
+      background-color: #cebcbd;
+
+      mat-icon {
+        height: 25px;
+        width: 25px;
+        font-size: 25px;
+      }
+    }
+  }
 
   form {
     display: flex;
@@ -53,18 +79,29 @@
       }
     }
 
-    button {
+    .buttons {
+      display: flex;
+      flex-direction: row;
       margin-top: 30px;
-      padding: 10px 15px;
-      cursor: pointer;
-      // background-color: #c6141b;
-      background-color: #cebcbd;
-      color: black;
-      // color: white;
-      border: none;
-      width: 40%;
-      font-weight: 500;
-      border-radius: 12px;
+
+      button {
+        margin: 0 15px;
+        padding: 12px 17px;
+        cursor: pointer;
+        // background-color: #c6141b;
+        background-color: #cebcbd;
+        color: black;
+        // color: white;
+        border: none;
+        width: 40%;
+        font-weight: 500;
+        border-radius: 12px;
+      }
+
+      #delete {
+        background-color: #c6141b;
+        color: white;
+      }
     }
   }
 }
