--- a/src/app/components/admin-modal-dialog/admin-ingredient/admin-ingredient.component.html
+++ b/src/app/components/admin-modal-dialog/admin-ingredient/admin-ingredient.component.html
@@ -4,8 +4,13 @@
   *ngIf="store$ | async as store"
 >
   <div class="modal-dialog-container" onclick="event.stopPropagation()">
+    <div class="close-button">
+      <button (click)="close()">
+        <mat-icon>close</mat-icon>
+      </button>
+    </div>
     <form [formGroup]="form">
-      <h1>{{ form.controls.name.value }}</h1>
+      <h1>{{ form.controls.name.value || "Name" }}</h1>
       <div class="form-group form-group-margin">
         <label>Name</label>
         <input type="text" formControlName="name" class="form-control" />
@@ -30,68 +35,10 @@
           max="1000"
         />
       </div>
-      <button (click)="submit()">Submit</button>
+      <div class="buttons">
+        <button (click)="submit()">Submit</button>
+        <button id="delete" (click)="delete()">Delete</button>
+      </div>
     </form>
-
-    <!-- <mat-grid-list
-      cols="2"
-      rowHeight="325px"
-      gutterSize="40px"
-      class="creation-grid-list"
-    >
-      <mat-grid-tile>
-        <img [src]="form.controls.image.value" alt="" />
-        <mat-grid-tile-footer>
-          {{ form.controls.name.value }}
-        </mat-grid-tile-footer>
-      </mat-grid-tile>
-      <mat-grid-tile>
-        <form [formGroup]="form">
-          <div class="form-group form-group-margin">
-            <label>Name</label>
-            <input type="text" formControlName="name" class="form-control" />
-          </div>
-          <div class="form-group form-group-margin">
-            <label>Image</label>
-            <input type="text" formControlName="image" class="form-control" />
-          </div>
-          <div class="form-group form-group-margin">
-            <label>Cost</label>
-            <input
-              type="number"
-              formControlName="cost"
-              class="form-control"
-              min="0"
-              max="250"
-            />
-          </div>
-        </form>
-      </mat-grid-tile>
-      <mat-grid-tile>
-        <form [formGroup]="form">
-          <div class="form-group">
-            <label>Ingredients</label>
-            <ng-select [multiple]="true" formControlName="ingredients">
-              <ng-option
-                *ngFor="let ingredient of store.ingredients"
-                [value]="ingredient.id"
-                >{{ ingredient.optionName }}</ng-option
-              >
-            </ng-select>
-          </div>
-          <div class="form-group">
-            <label>Categories</label>
-            <ng-select [multiple]="true" formControlName="categories">
-              <ng-option
-                *ngFor="let category of store.categories"
-                [value]="category.id"
-                >{{ category.value }}</ng-option
-              >
-            </ng-select>
-          </div>
-          <button (click)="submit()">Submit</button>
-        </form>
-      </mat-grid-tile>
-    </mat-grid-list> -->
   </div>
 </div>
