--- a/src/app/components/admin-modal-dialog/admin-product/admin-product.component.html
+++ b/src/app/components/admin-modal-dialog/admin-product/admin-product.component.html
@@ -4,6 +4,11 @@
   *ngIf="store$ | async as store"
 >
   <div class="modal-dialog-container" onclick="event.stopPropagation()">
+    <div class="close-button">
+      <button (click)="close()">
+        <mat-icon>close</mat-icon>
+      </button>
+    </div>
     <mat-grid-list
       cols="3"
       rowHeight="325px"
@@ -40,44 +45,11 @@
       </mat-grid-tile>
       <mat-grid-tile>
         <form [formGroup]="form">
-          <!-- <div class="form-group">
-            <label>Categories</label>
-            <input
-              type="text"
-              formControlName="categories"
-              class="form-control"
-              list="category-datalist"
-              multiple
-            />
-            <datalist id="category-datalist">
-              <option
-                *ngFor="let category of store.categories"
-                [value]="category.value"
-              ></option>
-            </datalist>
-          </div>
           <div class="form-group">
-            <label>Ingredients</label>
-            <input
-              type="text"
-              formControlName="ingredients"
-              class="form-control"
-              list="ingredient-datalist"
-              multiple
-            />
-            <datalist id="ingredient-datalist">
-              <option
-                *ngFor="let ingredient of store.ingredients"
-                [value]="ingredient.optionName"
-              ></option>
-            </datalist>
-          </div> -->
-          <div class="form-group">
-            <!-- [(ngModel)]="chosenIngredients" -->
             <label>Ingredients</label>
             <ng-select [multiple]="true" formControlName="ingredients">
               <ng-option
-                *ngFor="let ingredient of store.ingredients"
+                *ngFor="let ingredient of store.ingredients.ingredients"
                 [value]="ingredient.id"
                 >{{ ingredient.optionName }}</ng-option
               >
@@ -87,13 +59,16 @@
             <label>Categories</label>
             <ng-select [multiple]="true" formControlName="categories">
               <ng-option
-                *ngFor="let category of store.categories"
+                *ngFor="let category of store.categories.categories"
                 [value]="category.id"
                 >{{ category.value }}</ng-option
               >
             </ng-select>
           </div>
-          <button (click)="submit()">Submit</button>
+          <div class="buttons">
+            <button (click)="submit()">Submit</button>
+            <button id="delete" (click)="delete()">Delete</button>
+          </div>
         </form>
       </mat-grid-tile>
     </mat-grid-list>
