--- a/src/app/components/admin-modal-dialog/admin-product/admin-product.component.scss
+++ b/src/app/components/admin-modal-dialog/admin-product/admin-product.component.scss
@@ -15,6 +15,32 @@
   padding: 40px;
   background-color: white;
   border-radius: 25px;
+  position: relative;
+
+  .close-button {
+    position: absolute;
+    right: -10px;
+    top: -10px;
+    width: 50px;
+    height: 30px;
+    border: none;
+    outline: none;
+
+    button {
+      width: 100%;
+      height: 100%;
+      border: none;
+      cursor: pointer;
+      border-radius: 5px;
+      background-color: #cebcbd;
+
+      mat-icon {
+        height: 25px;
+        width: 25px;
+        font-size: 25px;
+      }
+    }
+  }
 
   .mat-grid-list {
     mat-grid-tile {
@@ -87,17 +113,29 @@
           }
         }
 
-        button {
+        .buttons {
+          display: flex;
+          flex-direction: row;
           margin-top: 30px;
-          padding: 10px 15px;
-          cursor: pointer;
-          // background-color: #c6141b;
-          background-color: #cebcbd;
-          color: black;
-          // color: white;
-          border: none;
-          width: 40%;
-          font-weight: 500;
+
+          button {
+            margin: 0 15px;
+            padding: 12px 17px;
+            cursor: pointer;
+            // background-color: #c6141b;
+            background-color: #cebcbd;
+            color: black;
+            // color: white;
+            border: none;
+            width: 40%;
+            font-weight: 500;
+            border-radius: 12px;
+          }
+
+          #delete {
+            background-color: #c6141b;
+            color: white;
+          }
         }
       }
     }
