--- a/src/app/shared/components/nav-bar/nav-bar.component.scss
+++ b/src/app/shared/components/nav-bar/nav-bar.component.scss
@@ -7,8 +7,13 @@
   min-height: 100vh;
   position: relative;
   z-index: 2;
+  display: flex;
+  flex-direction: column;
 
   .up-group {
+    align-items: flex-start;
+    flex-grow: 0;
+
     .user-info {
       max-width: 100%;
       height: 120px;
@@ -91,12 +96,26 @@
   }
 
   .lower-bar {
-    position: absolute;
-    bottom: 0;
-    left: 0;
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+    justify-content: flex-end;
     list-style: none;
     width: 100%;
     padding: 0px;
+
+    .selected {
+      background-color: #c6141b;
+
+      mat-grid-tile-footer {
+        background-color: #c6141b;
+        color: white;
+      }
+
+      a mat-icon {
+        color: white;
+      }
+    }
 
     li {
       cursor: pointer;
