--- a/src/app/components/modal-dialog/modal-dialog.component.scss
+++ b/src/app/components/modal-dialog/modal-dialog.component.scss
@@ -144,6 +144,11 @@
       border-radius: 15px;
       color: white;
     }
+
+    button:disabled {
+      cursor: default;
+      background-color: #cebcbd;
+    }
   }
 }
 
