--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -6,29 +6,76 @@
       </h3>
       <button (click)="logout()">Logout</button>
     </div>
-
-    <mat-grid-list cols="1" rowHeight="120px" *ngIf="store$ | async as store">
-      <mat-grid-tile
-        *ngFor="let category of store.categories.categories"
-        [class.tile-selected]="category.id == chosenCategory?.id"
-      >
-        <a routerLink="/menu/{{ category.value }}">
-          <mat-icon aria-hidden="false" aria-label="drink icon">{{
-            category.icon
-          }}</mat-icon>
-          <mat-grid-tile-footer> {{ category.value }}s </mat-grid-tile-footer>
+    <mat-grid-list
+      cols="1"
+      rowHeight="120px"
+      *ngIf="isAdmimPage; else mainNavBar"
+    >
+      <mat-grid-tile [class.tile-selected]="router.url == '/admin/product'">
+        <a routerLink="/admin/product">
+          <mat-icon aria-hidden="false" aria-label="drink icon">
+            view_in_ar
+          </mat-icon>
+          <mat-grid-tile-footer> Products </mat-grid-tile-footer>
+        </a>
+      </mat-grid-tile>
+      <mat-grid-tile [class.tile-selected]="router.url == '/admin/ingredient'">
+        <a routerLink="/admin/ingredient">
+          <mat-icon aria-hidden="false" aria-label="drink icon">
+            menu_open
+          </mat-icon>
+          <mat-grid-tile-footer> Ingredients </mat-grid-tile-footer>
+        </a>
+      </mat-grid-tile>
+      <mat-grid-tile [class.tile-selected]="router.url == '/admin/category'">
+        <a routerLink="/admin/category">
+          <mat-icon aria-hidden="false" aria-label="drink icon">
+            category
+          </mat-icon>
+          <mat-grid-tile-footer> Categories </mat-grid-tile-footer>
+        </a>
+      </mat-grid-tile>
+      <mat-grid-tile [class.tile-selected]="router.url == '/admin/user'">
+        <a routerLink="/admin/user">
+          <mat-icon aria-hidden="false" aria-label="drink icon">
+            people
+          </mat-icon>
+          <mat-grid-tile-footer> Users </mat-grid-tile-footer>
+        </a>
+      </mat-grid-tile>
+      <mat-grid-tile>
+        <a routerLink="/menu/burger">
+          <mat-icon aria-hidden="false" aria-label="drink icon">
+            arrow_back
+          </mat-icon>
+          <mat-grid-tile-footer> Back </mat-grid-tile-footer>
         </a>
       </mat-grid-tile>
     </mat-grid-list>
+    <ng-template #mainNavBar>
+      <mat-grid-list cols="1" rowHeight="120px" *ngIf="store$ | async as store">
+        <mat-grid-tile
+          *ngFor="let category of store.categories.items"
+          [class.tile-selected]="category.id == chosenCategory?.id"
+        >
+          <a routerLink="/menu/{{ category.name }}">
+            <mat-icon aria-hidden="false" aria-label="drink icon">{{
+              category.icon
+            }}</mat-icon>
+            <mat-grid-tile-footer> {{ category.name }}s </mat-grid-tile-footer>
+          </a>
+        </mat-grid-tile>
+      </mat-grid-list>
+    </ng-template>
   </div>
 
   <ul class="lower-bar">
     <li
       class="admin-page"
       *ngIf="isAdmin; else history"
-      [class.selected]="router.url === '/admin'"
+      [class.selected]="isAdmimPage"
     >
-      <a routerLink="/admin">
+      <a routerLink="/admin/product">
         <mat-icon aria-hidden="false" aria-label="drink icon"
           >admin_panel_settings</mat-icon
         >
