--- a/src/app/components/modal-dialog/modal-dialog.component.scss
+++ b/src/app/components/modal-dialog/modal-dialog.component.scss
@@ -17,6 +17,7 @@
   flex-grow: 0;
   background-color: white;
   padding: 30px 20px;
+  color: black;
 
   .close-buttons {
     position: absolute;
