--- a/src/app/pages/order-page/order-page.component.html
+++ b/src/app/pages/order-page/order-page.component.html
@@ -24,7 +24,7 @@
         <div class="product-wrapper">
           <ul class="options-info">
             <li *ngFor="let opt of basketOrder.options">
-              <span>{{ opt.ingredient.optionName }}</span> X{{ opt.amount }}
+              <span>{{ opt.ingredient.name }}</span> X{{ opt.amount }}
             </li>
           </ul>
 
