--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@ng-select/ng-select/themes/default.theme.css";
+@import "~@angular/material/prebuilt-themes/pink-bluegrey.css";
 
 html,
 body {
@@ -16,23 +17,3 @@ mat-dialog-container {
 .ng-option {
   text-transform: capitalize;
 }
-
-// .ng-dropdown-panel .ng-dropdown-panel-items .ng-option.ng-option-selected,
-// .ng-dropdown-panel
-//   .ng-dropdown-panel-items
-//   .ng-option.ng-option-selected.ng-option-marked {
-//   background-color: #cebcbd;
-// }
-
-// ng-select {
-//   border: 1px solid black;
-//   padding: 0px 0px;
-
-//   .ng-dropdown-panel {
-//     border: 1px solid black;
-//   }
-
-//   // .ng-option {
-//   //   border: 1px solid black;
-//   // }
-// }
