--- a/src/app/pages/category-page/category-page.component.scss
+++ b/src/app/pages/category-page/category-page.component.scss
@@ -17,11 +17,88 @@
   height: 100%;
   padding: 15px 0;
 
-  h1 {
-    font-weight: 300;
-    font-size: 50px;
-    padding: 25px 0px;
-    text-transform: capitalize;
+  .category-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    h1 {
+      font-weight: 300;
+      font-size: 50px;
+      padding: 25px 0px;
+      text-transform: capitalize;
+    }
+
+    .search {
+      margin-top: 15px;
+      display: flex;
+      align-items: center;
+      height: 50px;
+
+      .opened {
+        border-bottom-left-radius: 0px;
+        border-top-left-radius: 0px;
+      }
+
+      mat-icon {
+        margin-right: 15px;
+        display: flex;
+        border-radius: 50%;
+        align-items: center;
+        justify-content: center;
+        font-size: 30px;
+        height: 50px;
+        width: 50px;
+        color: white;
+        background-color: #c6141b;
+        cursor: pointer;
+        user-select: none;
+      }
+
+      .order-icon {
+        position: relative;
+      }
+      .order-wrapper {
+        height: 50px;
+        margin-right: 15px;
+        z-index: 3;
+
+        .orderOptions {
+          width: 200px;
+          display: flex;
+          flex-direction: column;
+          background-color: #c6141b;
+          color: white;
+          border-radius: 25px;
+          padding: 10px 20px;
+
+          mat-radio-button {
+            margin: 5px 0;
+            font-weight: 500;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            font-size: 10px;
+
+            .mat-radio-label-content {
+              margin-left: 20px;
+            }
+          }
+        }
+      }
+
+      input {
+        background-color: #c6141b;
+        padding: 17px 23px;
+        border: none;
+        color: white;
+        border-bottom-left-radius: 25px;
+        border-top-left-radius: 25px;
+      }
+
+      input:focus {
+        outline: none;
+      }
+    }
   }
 
   .tile-selected {
@@ -30,6 +107,9 @@
     mat-grid-tile-footer {
       background-color: #c6141b;
       color: white;
+      span {
+        font-weight: 500;
+      }
     }
   }
 
@@ -52,6 +132,9 @@
       font-size: 20px;
       color: black;
       background-color: #f8f8f7;
+      span {
+        font-weight: 500;
+      }
     }
   }
 }
