--- a/src/app/shared/components/nav-bar/nav-bar.component.scss
+++ b/src/app/shared/components/nav-bar/nav-bar.component.scss
@@ -14,38 +14,54 @@
     align-items: flex-start;
     flex-grow: 0;
 
-    .user-info {
-      max-width: 100%;
-      height: 120px;
-      padding: 10px;
-      background-color: #cebcbd;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+    .selected {
+      background-color: #c6141b;
 
-      h3 {
-        font-size: 18px;
-        font-weight: 300;
-        margin: 0px;
-        padding: 15px 0 10px;
-
-        span {
-          font-weight: 500;
+      a {
+        mat-grid-tile-footer {
+          background-color: #c6141b;
+          color: white;
         }
-      }
-
-      button {
-        cursor: pointer;
-        padding: 8px 15px;
-        border: none;
-        font-size: 18px;
-        font-weight: 700;
-        color: white;
-        background-color: black;
       }
     }
 
-    // mat-grid-list {}
+    div {
+      max-width: 100%;
+      height: 120px;
+      background-color: #cebcbd;
+
+      a {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        text-decoration: none;
+
+        mat-icon {
+          height: 80px;
+          width: 45px;
+          font-size: 45px;
+          color: white;
+          display: flex;
+          align-items: center;
+        }
+
+        mat-grid-tile-footer {
+          display: block;
+          text-align: center;
+          width: 100%;
+          height: 36px;
+          background-color: #cebcbd;
+          font-size: 14px;
+          font-weight: 500;
+          letter-spacing: 1.5px;
+          color: rgb(91, 91, 91);
+          text-transform: uppercase;
+        }
+      }
+    }
 
     .tile-selected {
       background-color: #c6141b;
@@ -88,10 +104,7 @@
       font-size: 17px;
       font-weight: 300;
       color: black;
-
-      &::first-letter {
-        text-transform: uppercase;
-      }
+      text-transform: capitalize;
     }
   }
 
